--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-SOCKET_URL=ws://localhost:3000
+# SOCKET_URL=ws://192.168.64.1:3000
+SOCKET_URL=ws://10.0.2.2:3000
 
-API_URL=http://localhost:3000/api
+# API_URL=http://192.168.64.1:3000/api
+API_URL=http://10.0.2.2:3000/api
