--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# SOCKET_URL=ws://192.168.64.1:3000
-SOCKET_URL=ws://sandbox.liquidlab.in/ticketless
+SOCKET_URL=http://192.168.1.16:3000
+# SOCKET_URL=https://sandbox.liquidlab.in
 
-# API_URL=http://192.168.64.1:3000/api
-API_URL=https://sandbox.liquidlab.in/ticketless/api
+API_URL=http://192.168.1.16:3000/api
+# API_URL=https://sandbox.liquidlab.in/ticketless/api
